--- a/notebook/get_geo.ipynb
+++ b/notebook/get_geo.ipynb
@@ -40,11 +40,14 @@
    },
    "outputs": [],
    "source": [
+    "def next_line(io):\n",
+    "\n",
+    "    return io.readline().decode()\n",
+    "\n",
+    "\n",
     "with open(file_path) as io:\n",
     "\n",
-    "    platform_data_headers = []\n",
-    "\n",
-    "    platform_data_rows = []\n",
+    "    platform_table = []\n",
     "\n",
     "    samples = {}\n",
     "\n",
@@ -54,13 +57,13 @@
     "\n",
     "        if line == \"!platform_table_begin\\n\":\n",
     "\n",
-    "            line = io.readline().decode()\n",
+    "            line = next_line(io)\n",
     "\n",
     "            while line != \"!platform_table_end\\n\":\n",
     "\n",
-    "                platform_data_rows.append(line.rstrip().split(sep=\"\\t\"))\n",
+    "                platform_table.append(line.rstrip().split(sep=\"\\t\"))\n",
     "\n",
-    "                line = io.readline().decode()\n",
+    "                line = next_line(io)\n",
     "\n",
     "        if line.startswith(\"^SAMPLE\"):\n",
     "\n",
@@ -68,19 +71,19 @@
     "\n",
     "            samples[sample] = {\"table\": []}\n",
     "\n",
-    "            line = io.readline().decode()\n",
+    "            line = next_line(io)\n",
     "\n",
-    "            while line.startswith(\"^SAMPLE\"):\n",
+    "            while line and not line.startswith(\"^SAMPLE\"):\n",
     "\n",
     "                if line == \"!sample_table_begin\\n\":\n",
     "\n",
-    "                    line = io.readline().decode()\n",
+    "                    line = next_line(io)\n",
     "\n",
     "                    while line != \"!sample_table_end\\n\":\n",
     "\n",
     "                        samples[sample][\"table\"].append(line.rstrip().split(sep=\"\\t\"))\n",
     "\n",
-    "                        line = io.readline().decode()\n",
+    "                        line = next_line(io)\n",
     "\n",
     "                else:\n",
     "\n",
@@ -90,13 +93,15 @@
     "\n",
     "                    except:\n",
     "\n",
+    "                        line = next_line(io)\n",
+    "\n",
     "                        continue\n",
     "\n",
     "                    samples[sample][key] = value\n",
     "\n",
-    "                line = io.readline().decode()\n",
+    "                line = next_line(io)\n",
     "\n",
-    "platform_table = pd.DataFrame(data=platform_data_rows)\n",
+    "platform_table = pd.DataFrame(data=platform_table)\n",
     "\n",
     "platform_table.columns = platform_table.iloc[0]\n",
     "\n",
@@ -108,7 +113,25 @@
     "\n",
     "assert not platform_table.index.has_duplicates\n",
     "\n",
-    "platform_table"
+    "print(platform_table)\n",
+    "\n",
+    "for dict_ in samples.values():\n",
+    "\n",
+    "    table = pd.DataFrame(dict_[\"table\"])\n",
+    "\n",
+    "    table.columns = table.iloc[0]\n",
+    "\n",
+    "    assert not table.columns.has_duplicates\n",
+    "\n",
+    "    table.drop(0, inplace=True)\n",
+    "\n",
+    "    table.set_index(\"ID_REF\", inplace=True)\n",
+    "\n",
+    "    assert not table.index.has_duplicates\n",
+    "\n",
+    "    dict_[\"table\"] = table\n",
+    "\n",
+    "print(samples)"
    ]
   }
  ],
