--- a/notebook/get_geo.ipynb
+++ b/notebook/get_geo.ipynb
@@ -18,9 +18,8 @@
    "source": [
     "from gzip import open\n",
     "\n",
-    "import pandas as pd\n",
-    "\n",
-    "import kraft"
+    "from numpy import nan\n",
+    "from pandas import DataFrame"
    ]
   },
   {
@@ -91,7 +90,7 @@
     "\n",
     "                        key, value = line.rstrip().split(sep=\" = \")\n",
     "\n",
-    "                    except:\n",
+    "                    except ValueError:\n",
     "\n",
     "                        line = next_line(io)\n",
     "\n",
@@ -101,7 +100,7 @@
     "\n",
     "                line = next_line(io)\n",
     "\n",
-    "platform_table = pd.DataFrame(data=platform_table)\n",
+    "platform_table = DataFrame(data=platform_table)\n",
     "\n",
     "platform_table.columns = platform_table.iloc[0]\n",
     "\n",
@@ -113,11 +112,9 @@
     "\n",
     "assert not platform_table.index.has_duplicates\n",
     "\n",
-    "print(platform_table)\n",
-    "\n",
     "for dict_ in samples.values():\n",
     "\n",
-    "    table = pd.DataFrame(dict_[\"table\"])\n",
+    "    table = DataFrame(dict_[\"table\"])\n",
     "\n",
     "    table.columns = table.iloc[0]\n",
     "\n",
@@ -129,9 +126,38 @@
     "\n",
     "    assert not table.index.has_duplicates\n",
     "\n",
-    "    dict_[\"table\"] = table\n",
+    "    dict_[\"table\"] = table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gene_assignment(str_):\n",
     "\n",
-    "print(samples)"
+    "    if \"//\" in str_:\n",
+    "\n",
+    "        return str_.split(\"//\")[1].strip()\n",
+    "\n",
+    "for column, function in (\n",
+    "    (\"gene_symbol\", None),\n",
+    "    (\"oligoset_genesymbol\", None),\n",
+    "    (\"ilmn_gene\",None),\n",
+    "    (\"gene\",None),\n",
+    "    (\"gene_assignment\",gene_assignment),\n",
+    "):\n",
+    "\n",
+    "    if column in platform_table:\n",
+    "        \n",
+    "        series = platform_table[column]\n",
+    "        \n",
+    "        if function is not None:\n",
+    "            \n",
+    "            series = series.apply(function)\n",
+    "            \n",
+    "        id_gene = series.fillna(nan).to_dict()"
    ]
   }
  ],
