--- a/notebook/get_geo.ipynb
+++ b/notebook/get_geo.ipynb
@@ -34,9 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def next_line(io):\n",
@@ -98,8 +96,15 @@
     "\n",
     "                    samples[sample][key] = value\n",
     "\n",
-    "                line = next_line(io)\n",
-    "\n",
+    "                line = next_line(io)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "platform_table = DataFrame(data=platform_table)\n",
     "\n",
     "platform_table.columns = platform_table.iloc[0]\n",
@@ -110,23 +115,7 @@
     "\n",
     "platform_table.set_index(\"ID\", inplace=True)\n",
     "\n",
-    "assert not platform_table.index.has_duplicates\n",
-    "\n",
-    "for dict_ in samples.values():\n",
-    "\n",
-    "    table = DataFrame(dict_[\"table\"])\n",
-    "\n",
-    "    table.columns = table.iloc[0]\n",
-    "\n",
-    "    assert not table.columns.has_duplicates\n",
-    "\n",
-    "    table.drop(0, inplace=True)\n",
-    "\n",
-    "    table.set_index(\"ID_REF\", inplace=True)\n",
-    "\n",
-    "    assert not table.index.has_duplicates\n",
-    "\n",
-    "    dict_[\"table\"] = table"
+    "assert not platform_table.index.has_duplicates"
    ]
   },
   {
@@ -158,7 +147,34 @@
     "\n",
     "            series = series.apply(function)\n",
     "\n",
-    "        id_gene = series.fillna(nan).to_dict()"
+    "        id_gene = series.fillna(nan).to_dict()\n",
+    "\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for dict_ in samples.values():\n",
+    "\n",
+    "    table = DataFrame(dict_[\"table\"]).squeeze()\n",
+    "\n",
+    "    table.columns = table.iloc[0]\n",
+    "\n",
+    "    assert not table.columns.has_duplicates\n",
+    "\n",
+    "    table.drop(0, inplace=True)\n",
+    "\n",
+    "    table.set_index(\"ID_REF\", inplace=True)\n",
+    "\n",
+    "    assert not table.index.has_duplicates\n",
+    "\n",
+    "    table.index = table.index.map(id_gene)\n",
+    "\n",
+    "    dict_[\"table\"] = table.loc[~table.index.isna()]"
    ]
   }
  ],
