--- a/notebook/medulloblastoma.ipynb
+++ b/notebook/medulloblastoma.ipynb
@@ -18,8 +18,11 @@
    "source": [
     "import os\n",
     "\n",
+    "import pandas as pd\n",
+    "\n",
     "import get_geo\n",
-    "import kraft"
+    "import kraft\n",
+    "import name_biology"
    ]
   },
   {
@@ -50,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kraft.summarize(gene_x_sample)"
+    "gene_x_sample"
    ]
   },
   {
@@ -59,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kraft.summarize(continuous_x_sample)"
+    "information_x_sample"
    ]
   },
   {
@@ -68,7 +71,165 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kraft.summarize(binary_x_sample)"
+    "continuous_x_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "binary_x_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    gene_x_sample,\n",
+    "    information_x_sample,\n",
+    "    continuous_x_sample,\n",
+    "    binary_x_sample,\n",
+    ") = get_geo.get_gse(\"GSE85212\", directory_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gene_x_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "information_x_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "continuous_x_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "binary_x_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# file_path = kraft.download(\"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE85nnn/GSE85212/suppl/GSE85212_Methylation_763samples_SubtypeStudy_TaylorLab_beta_values.txt.gz\", directory_path)\n",
+    "\n",
+    "file_path = \"{}/GSE85212_Methylation_763samples_SubtypeStudy_TaylorLab_beta_values.txt.gz\".format(\n",
+    "    directory_path\n",
+    ")\n",
+    "\n",
+    "methylation_cg_x_sample = pd.read_csv(file_path, sep=\"\\t\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "methylation_gene_x_sample = methylation_cg_x_sample\n",
+    "\n",
+    "methylation_gene_x_sample.index = methylation_cg_x_sample.index.map(\n",
+    "    name_biology.ILMNID_GENE\n",
+    ")\n",
+    "\n",
+    "print(methylation_gene_x_sample.shape)\n",
+    "\n",
+    "methylation_gene_x_sample = methylation_gene_x_sample.groupby(level=0).median()\n",
+    "\n",
+    "print(methylation_gene_x_sample.shape)\n",
+    "\n",
+    "sample_name_geo_sample_name = dict(\n",
+    "    zip(\n",
+    "        information_x_sample.loc[\"!Sample_title\"].str[: -len(\"_methylation\") - 1],\n",
+    "        information_x_sample.columns,\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "methylation_gene_x_sample.columns = methylation_cg_x_sample.columns.map(\n",
+    "    sample_name_geo_sample_name\n",
+    ")\n",
+    "\n",
+    "kraft.summarize(methylation_gene_x_sample)\n",
+    "\n",
+    "methylation_gene_x_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    gene_x_sample,\n",
+    "    information_x_sample,\n",
+    "    continuous_x_sample,\n",
+    "    binary_x_sample,\n",
+    ") = get_geo.get_gse(\"GSE85217\", directory_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gene_x_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "information_x_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "continuous_x_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "binary_x_sample"
    ]
   }
  ],
