--- a/notebook/medulloblastoma.ipynb
+++ b/notebook/medulloblastoma.ipynb
@@ -42,9 +42,12 @@
    },
    "outputs": [],
    "source": [
-    "gene_x_sample, continuous_x_sample, binary_x_sample = get_geo.get_gse(\n",
-    "    \"GSE37382\", directory_path\n",
-    ")"
+    "(\n",
+    "    gene_x_sample,\n",
+    "    information_x_sample,\n",
+    "    continuous_x_sample,\n",
+    "    binary_x_sample,\n",
+    ") = get_geo.get_gse(\"GSE37382\", directory_path)"
    ]
   },
   {
@@ -139,10 +142,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# file_path = kraft.download(\"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE85nnn/GSE85212/suppl/GSE85212_Methylation_763samples_SubtypeStudy_TaylorLab_beta_values.txt.gz\", directory_path)\n",
-    "\n",
-    "file_path = \"{}/GSE85212_Methylation_763samples_SubtypeStudy_TaylorLab_beta_values.txt.gz\".format(\n",
-    "    directory_path\n",
+    "file_path = kraft.download(\n",
+    "    \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE85nnn/GSE85212/suppl/GSE85212_Methylation_763samples_SubtypeStudy_TaylorLab_beta_values.txt.gz\",\n",
+    "    directory_path,\n",
     ")\n",
     "\n",
     "methylation_cg_x_sample = pd.read_csv(file_path, sep=\"\\t\")"
@@ -230,6 +232,30 @@
    "outputs": [],
    "source": [
     "binary_x_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "information_x_sample = pd.read_csv(\"mmc2_ben.tsv\", sep=\"\\t\", index_col=0).T.dropna(\n",
+    "    how=\"all\"\n",
+    ")\n",
+    "\n",
+    "information_x_sample.columns = information_x_sample.columns.map(\n",
+    "    sample_name_geo_sample_name\n",
+    ")\n",
+    "\n",
+    "\n",
+    "binary_cnv_information_x_sample = information_x_sample.iloc[17:]\n",
+    "\n",
+    "information_x_sample = information_x_sample.iloc[:17]\n",
+    "\n",
+    "continuous_information_x_sample, binary_information_x_sample = kraft.separate_type(\n",
+    "    information_x_sample\n",
+    ")"
    ]
   }
  ],
