--- a/notebook/medulloblastoma.ipynb
+++ b/notebook/medulloblastoma.ipynb
@@ -257,6 +257,24 @@
     "    information_x_sample\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "for i in range(2, 5):\n",
+    "\n",
+    "    kraft.download(\n",
+    "        \"https://www.cell.com/cms/10.1016/j.ccell.2017.05.005/attachment/df711e2d-1de5-4fce-bd11-0431377e2db2/mmc{}.xlsx\".format(\n",
+    "            i\n",
+    "        ),\n",
+    "        directory_path,\n",
+    "    )"
+   ]
   }
  ],
  "metadata": {
