Figured out GSE mess

--- a/notebook/medulloblastoma.ipynb
+++ b/notebook/medulloblastoma.ipynb
@@ -31,15 +31,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "directory_path = os.path.expanduser(\"~/Downloads\")"
+    "directory_path = os.path.expanduser(\"~/Downloads\")\n",
+    "\n",
+    "overwrite = False"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Northcott et al"
+   ],
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "(\n",
@@ -47,7 +56,7 @@
     "    information_x_sample,\n",
     "    continuous_x_sample,\n",
     "    binary_x_sample,\n",
-    ") = get_geo.get_gse(\"GSE37382\", directory_path)"
+    ") = get_geo.get_gse(\"GSE37382\", directory_path, overwrite=overwrite)"
    ]
   },
   {
@@ -87,102 +96,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "(\n",
-    "    gene_x_sample,\n",
-    "    information_x_sample,\n",
-    "    continuous_x_sample,\n",
-    "    binary_x_sample,\n",
-    ") = get_geo.get_gse(\"GSE85212\", directory_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
+    "## Cavallie et al"
+   ],
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gene_x_sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "information_x_sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "continuous_x_sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "binary_x_sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_path = kraft.download(\n",
-    "    \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE85nnn/GSE85212/suppl/GSE85212_Methylation_763samples_SubtypeStudy_TaylorLab_beta_values.txt.gz\",\n",
-    "    directory_path,\n",
-    ")\n",
-    "\n",
-    "methylation_cg_x_sample = pd.read_csv(file_path, sep=\"\\t\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "methylation_gene_x_sample = methylation_cg_x_sample\n",
-    "\n",
-    "methylation_gene_x_sample.index = methylation_cg_x_sample.index.map(\n",
-    "    name_biology.ILMNID_GENE\n",
-    ")\n",
-    "\n",
-    "print(methylation_gene_x_sample.shape)\n",
-    "\n",
-    "methylation_gene_x_sample = methylation_gene_x_sample.groupby(level=0).median()\n",
-    "\n",
-    "print(methylation_gene_x_sample.shape)\n",
-    "\n",
-    "sample_name_geo_sample_name = dict(\n",
-    "    zip(\n",
-    "        information_x_sample.loc[\"!Sample_title\"].str[: -len(\"_methylation\") - 1],\n",
-    "        information_x_sample.columns,\n",
-    "    )\n",
-    ")\n",
-    "\n",
-    "methylation_gene_x_sample.columns = methylation_cg_x_sample.columns.map(\n",
-    "    sample_name_geo_sample_name\n",
-    ")\n",
-    "\n",
-    "kraft.summarize(methylation_gene_x_sample)\n",
-    "\n",
-    "methylation_gene_x_sample"
-   ]
+   "outputs": []
   },
   {
    "cell_type": "code",
@@ -195,7 +115,7 @@
     "    information_x_sample,\n",
     "    continuous_x_sample,\n",
     "    binary_x_sample,\n",
-    ") = get_geo.get_gse(\"GSE85217\", directory_path)"
+    ") = get_geo.get_gse(\"GSE85218\", directory_path, overwrite=overwrite)"
    ]
   },
   {
@@ -204,76 +124,127 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gene_x_sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "information_x_sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "continuous_x_sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "binary_x_sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "information_x_sample = pd.read_csv(\"mmc2_ben.tsv\", sep=\"\\t\", index_col=0).T.dropna(\n",
-    "    how=\"all\"\n",
-    ")\n",
-    "\n",
-    "information_x_sample.columns = information_x_sample.columns.map(\n",
-    "    sample_name_geo_sample_name\n",
-    ")\n",
-    "\n",
-    "\n",
-    "binary_cnv_information_x_sample = information_x_sample.iloc[17:]\n",
-    "\n",
-    "information_x_sample = information_x_sample.iloc[:17]\n",
-    "\n",
-    "continuous_information_x_sample, binary_information_x_sample = kraft.separate_type(\n",
-    "    information_x_sample\n",
+    "gsm_name = dict(\n",
+    "    zip(information_x_sample.columns, information_x_sample.loc[\"!Sample_title\"],)\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(2, 5):\n",
-    "\n",
-    "    kraft.download(\n",
-    "        \"https://www.cell.com/cms/10.1016/j.ccell.2017.05.005/attachment/df711e2d-1de5-4fce-bd11-0431377e2db2/mmc{}.xlsx\".format(\n",
-    "            i\n",
+    "information_x_sample_ = (\n",
+    "    pd.read_excel(\n",
+    "        kraft.download(\n",
+    "            \"https://www.cell.com/cms/10.1016/j.ccell.2017.05.005/attachment/08580637-48d7-4515-9883-3dca9b5e7b00/mmc2.xlsx\",\n",
+    "            directory_path,\n",
+    "            overwrite=overwrite,\n",
     "        ),\n",
+    "        skiprows=1,\n",
+    "        index_col=0,\n",
+    "    )\n",
+    "    .dropna(axis=1, how=\"all\")\n",
+    "    .T\n",
+    ")\n",
+    "\n",
+    "information_x_sample = (\n",
+    "    pd.read_csv(\"mmc2.tsv\".format(directory_path), sep=\"\\t\", index_col=0,).T\n",
+    ")[information_x_sample_.columns]\n",
+    "\n",
+    "information_x_sample"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cavallie et al (methylation)"
+   ],
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    gene_x_sample,\n",
+    "    information_x_sample,\n",
+    "    continuous_x_sample,\n",
+    "    binary_x_sample,\n",
+    ") = get_geo.get_gse(\"GSE85212\", directory_path, overwrite=overwrite)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gene_x_sample = pd.read_csv(\n",
+    "    kraft.download(\n",
+    "        \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE85nnn/GSE85212/suppl/GSE85212_Methylation_763samples_SubtypeStudy_TaylorLab_beta_values.txt.gz\",\n",
     "        directory_path,\n",
-    "    )"
+    "        overwrite=overwrite,\n",
+    "    ),\n",
+    "    sep=\"\\t\",\n",
+    ")\n",
+    "\n",
+    "gene_x_sample.index = gene_x_sample.index.map(name_biology.ILMNID_GENE)\n",
+    "\n",
+    "gene_x_sample = gene_x_sample.loc[~gene_x_sample.index.isna()]\n",
+    "\n",
+    "gene_x_sample"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cavallie et al (RNA)"
+   ],
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    gene_x_sample,\n",
+    "    information_x_sample,\n",
+    "    continuous_x_sample,\n",
+    "    binary_x_sample,\n",
+    ") = get_geo.get_gse(\"GSE85217\", directory_path, overwrite=overwrite)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gene_x_sample = pd.read_csv(\n",
+    "    kraft.download(\n",
+    "        \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE85nnn/GSE85217/suppl/GSE85217_M_exp_763_MB_SubtypeStudy_TaylorLab.txt.gz\",\n",
+    "        directory_path,\n",
+    "        overwrite=overwrite,\n",
+    "    ),\n",
+    "    sep=\"\\t\",\n",
+    "    index_col=0,\n",
+    ").iloc[:, 4:]\n",
+    "\n",
+    "gene_x_sample.index = gene_x_sample.index.map(name_biology.ENS_GENE)\n",
+    "\n",
+    "gene_x_sample = gene_x_sample.loc[~gene_x_sample.index.isna()]\n",
+    "\n",
+    "gene_x_sample"
    ]
   }
  ],
