--- a/notebook/medulloblastoma.ipynb
+++ b/notebook/medulloblastoma.ipynb
@@ -74,15 +74,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "information_x_sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "continuous_x_sample"
    ]
   },
@@ -110,20 +101,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(\n",
-    "    gene_x_sample,\n",
-    "    information_x_sample,\n",
-    "    continuous_x_sample,\n",
-    "    binary_x_sample,\n",
-    ") = get_geo.get_gse(\"GSE85218\", directory_path, overwrite=overwrite)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "information_x_sample = get_geo.get_gse(\"GSE85218\", directory_path, overwrite=overwrite)[\n",
+    "    1\n",
+    "]\n",
+    "\n",
     "gsm_name = dict(\n",
     "    zip(information_x_sample.columns, information_x_sample.loc[\"!Sample_title\"],)\n",
     ")"
@@ -135,48 +116,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "information_x_sample_ = (\n",
-    "    pd.read_excel(\n",
-    "        kraft.download(\n",
-    "            \"https://www.cell.com/cms/10.1016/j.ccell.2017.05.005/attachment/08580637-48d7-4515-9883-3dca9b5e7b00/mmc2.xlsx\",\n",
-    "            directory_path,\n",
-    "            overwrite=overwrite,\n",
-    "        ),\n",
-    "        skiprows=1,\n",
-    "        index_col=0,\n",
-    "    )\n",
-    "    .dropna(axis=1, how=\"all\")\n",
-    "    .T\n",
-    ")\n",
+    "information_x_sample = pd.read_csv(\n",
+    "    \"mmc2.tsv\".format(directory_path), sep=\"\\t\", index_col=0,\n",
+    ").T\n",
     "\n",
-    "information_x_sample = (\n",
-    "    pd.read_csv(\"mmc2.tsv\".format(directory_path), sep=\"\\t\", index_col=0,).T\n",
-    ")[information_x_sample_.columns]\n",
-    "\n",
-    "information_x_sample"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Cavallie et al (methylation)"
-   ],
-   "execution_count": null,
-   "outputs": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(\n",
-    "    gene_x_sample,\n",
-    "    information_x_sample,\n",
-    "    continuous_x_sample,\n",
-    "    binary_x_sample,\n",
-    ") = get_geo.get_gse(\"GSE85212\", directory_path, overwrite=overwrite)"
+    "continuous_x_sample, binary_x_sample = kraft.separate_type(information_x_sample)"
    ]
   },
   {
@@ -185,7 +129,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gene_x_sample = pd.read_csv(\n",
+    "continuous_x_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "binary_x_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "methylation_gene_x_sample = pd.read_csv(\n",
     "    kraft.download(\n",
     "        \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE85nnn/GSE85212/suppl/GSE85212_Methylation_763samples_SubtypeStudy_TaylorLab_beta_values.txt.gz\",\n",
     "        directory_path,\n",
@@ -194,34 +156,19 @@
     "    sep=\"\\t\",\n",
     ")\n",
     "\n",
-    "gene_x_sample.index = gene_x_sample.index.map(name_biology.ILMNID_GENE)\n",
+    "methylation_gene_x_sample.index = methylation_gene_x_sample.index.map(\n",
+    "    name_biology.ILMNID_GENE\n",
+    ")\n",
     "\n",
-    "gene_x_sample = gene_x_sample.loc[~gene_x_sample.index.isna()]\n",
+    "methylation_gene_x_sample = methylation_gene_x_sample.loc[\n",
+    "    ~methylation_gene_x_sample.index.isna()\n",
+    "]\n",
     "\n",
-    "gene_x_sample"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Cavallie et al (RNA)"
-   ],
-   "execution_count": null,
-   "outputs": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(\n",
-    "    gene_x_sample,\n",
-    "    information_x_sample,\n",
-    "    continuous_x_sample,\n",
-    "    binary_x_sample,\n",
-    ") = get_geo.get_gse(\"GSE85217\", directory_path, overwrite=overwrite)"
+    "methylation_gene_x_sample = kraft.group(methylation_gene_x_sample)\n",
+    "\n",
+    "methylation_gene_x_sample = kraft.tidy(methylation_gene_x_sample)\n",
+    "\n",
+    "methylation_gene_x_sample"
    ]
   },
   {
@@ -230,7 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gene_x_sample = pd.read_csv(\n",
+    "rna_gene_x_sample = pd.read_csv(\n",
     "    kraft.download(\n",
     "        \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE85nnn/GSE85217/suppl/GSE85217_M_exp_763_MB_SubtypeStudy_TaylorLab.txt.gz\",\n",
     "        directory_path,\n",
@@ -240,11 +187,15 @@
     "    index_col=0,\n",
     ").iloc[:, 4:]\n",
     "\n",
-    "gene_x_sample.index = gene_x_sample.index.map(name_biology.ENS_GENE)\n",
+    "rna_gene_x_sample.index = rna_gene_x_sample.index.map(name_biology.ENS_GENE)\n",
     "\n",
-    "gene_x_sample = gene_x_sample.loc[~gene_x_sample.index.isna()]\n",
+    "rna_gene_x_sample = rna_gene_x_sample.loc[~rna_gene_x_sample.index.isna()]\n",
     "\n",
-    "gene_x_sample"
+    "rna_gene_x_sample = kraft.group(rna_gene_x_sample)\n",
+    "\n",
+    "rna_gene_x_sample = kraft.tidy(rna_gene_x_sample)\n",
+    "\n",
+    "rna_gene_x_sample"
    ]
   }
  ],
