--- a/notebook/medulloblastoma.ipynb
+++ b/notebook/medulloblastoma.ipynb
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Northcott et al"
+    "https://www.nature.com/articles/nature11327"
    ]
   },
   {
@@ -49,46 +49,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(\n",
-    "    gene_x_sample,\n",
-    "    information_x_sample,\n",
-    "    continuous_x_sample,\n",
-    "    binary_x_sample,\n",
-    ") = get_geo.get_gse(\"GSE37382\", directory_path, overwrite=overwrite)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gene_x_sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "continuous_x_sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "binary_x_sample"
+    "gse_id = \"GSE37382\"\n",
+    "\n",
+    "(gene_x_sample, _, continuous_x_sample, binary_x_sample,) = get_geo.get_gse(\n",
+    "    gse_id, directory_path, overwrite=overwrite\n",
+    ")\n",
+    "\n",
+    "gene_x_sample.to_csv(\"{}/{}_gene_x_sample.tsv\".format(directory_path, gse_id))\n",
+    "\n",
+    "continuous_x_sample.to_csv(\n",
+    "    \"{}/{}_continuous_x_sample.tsv\".format(directory_path, gse_id)\n",
+    ")\n",
+    "\n",
+    "binary_x_sample.to_csv(\"{}/{}_binary_x_sample.tsv\".format(directory_path, gse_id))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cavallie et al"
+    "https://www.cell.com/cancer-cell/fulltext/S1535-6108(17)30201-5"
    ]
   },
   {
@@ -97,12 +77,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "information_x_sample = get_geo.get_gse(\"GSE85218\", directory_path, overwrite=overwrite)[\n",
-    "    1\n",
-    "]\n",
+    "gse_id = \"GSE85218\"\n",
     "\n",
-    "gsm_name = dict(\n",
-    "    zip(information_x_sample.columns, information_x_sample.loc[\"!Sample_title\"],)\n",
+    "continuous_x_sample, binary_x_sample = kraft.separate_type(\n",
+    "    pd.read_csv(\"mmc2.tsv\", sep=\"\\t\", index_col=0,).T\n",
+    ")\n",
+    "\n",
+    "continuous_x_sample = kraft.tidy(continuous_x_sample)\n",
+    "\n",
+    "binary_x_sample = kraft.tidy(binary_x_sample)\n",
+    "\n",
+    "continuous_x_sample.to_csv(\n",
+    "    \"{}/{}_continuous_x_sample.tsv\".format(directory_path, gse_id)\n",
+    ")\n",
+    "\n",
+    "binary_x_sample.to_csv(\"{}/{}_binary_x_sample.tsv\".format(directory_path, gse_id))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from kraft import group, tidy\n",
+    "\n",
+    "\n",
+    "def index_tidy_write(dataframe, dict_, file_path):\n",
+    "\n",
+    "    dataframe.index = dataframe.index.map(dict_)\n",
+    "\n",
+    "    dataframe = tidy(group(dataframe.loc[~dataframe.index.isna()]))\n",
+    "\n",
+    "    dataframe.to_csv(file_path, sep=\"\\t\")\n",
+    "\n",
+    "    return dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gene_x_sample = pd.read_csv(\n",
+    "    kraft.download(\n",
+    "        \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE85nnn/GSE85212/suppl/GSE85212_Methylation_763samples_SubtypeStudy_TaylorLab_beta_values.txt.gz\",\n",
+    "        directory_path,\n",
+    "        overwrite=overwrite,\n",
+    "    ),\n",
+    "    sep=\"\\t\",\n",
+    ")\n",
+    "\n",
+    "gene_x_sample.index = gene_x_sample.index.map(name_biology.ILMNID_GENE)\n",
+    "\n",
+    "gene_x_sample = tidy(group(gene_x_sample.loc[~gene_x_sample.index.isna()]))\n",
+    "\n",
+    "gene_x_sample.to_csv(\n",
+    "    \"{}/{}_methylation_gene_x_sample.tsv\".format(directory_path, gse_id), sep=\"\\t\"\n",
     ")"
    ]
   },
@@ -112,68 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "information_x_sample = pd.read_csv(\n",
-    "    \"mmc2.tsv\".format(directory_path), sep=\"\\t\", index_col=0,\n",
-    ").T\n",
-    "\n",
-    "continuous_x_sample, binary_x_sample = kraft.separate_type(information_x_sample)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "continuous_x_sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "binary_x_sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "methylation_gene_x_sample = pd.read_csv(\n",
-    "    kraft.download(\n",
-    "        \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE85nnn/GSE85212/suppl/GSE85212_Methylation_763samples_SubtypeStudy_TaylorLab_beta_values.txt.gz\",\n",
-    "        directory_path,\n",
-    "        overwrite=overwrite,\n",
-    "    ),\n",
-    "    sep=\"\\t\",\n",
-    ")\n",
-    "\n",
-    "methylation_gene_x_sample.index = methylation_gene_x_sample.index.map(\n",
-    "    name_biology.ILMNID_GENE\n",
-    ")\n",
-    "\n",
-    "methylation_gene_x_sample = methylation_gene_x_sample.loc[\n",
-    "    ~methylation_gene_x_sample.index.isna()\n",
-    "]\n",
-    "\n",
-    "methylation_gene_x_sample = kraft.group(methylation_gene_x_sample)\n",
-    "\n",
-    "methylation_gene_x_sample = kraft.tidy(methylation_gene_x_sample)\n",
-    "\n",
-    "methylation_gene_x_sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rna_gene_x_sample = pd.read_csv(\n",
+    "gene_x_sample = pd.read_csv(\n",
     "    kraft.download(\n",
     "        \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE85nnn/GSE85217/suppl/GSE85217_M_exp_763_MB_SubtypeStudy_TaylorLab.txt.gz\",\n",
     "        directory_path,\n",
@@ -183,15 +154,14 @@
     "    index_col=0,\n",
     ").iloc[:, 4:]\n",
     "\n",
-    "rna_gene_x_sample.index = rna_gene_x_sample.index.map(name_biology.ENS_GENE)\n",
     "\n",
-    "rna_gene_x_sample = rna_gene_x_sample.loc[~rna_gene_x_sample.index.isna()]\n",
+    "gene_x_sample.index = gene_x_sample.index.map(name_biology.ENS_GENE)\n",
     "\n",
-    "rna_gene_x_sample = kraft.group(rna_gene_x_sample)\n",
+    "gene_x_sample = tidy(group(gene_x_sample.loc[~gene_x_sample.index.isna()]))\n",
     "\n",
-    "rna_gene_x_sample = kraft.tidy(rna_gene_x_sample)\n",
-    "\n",
-    "rna_gene_x_sample"
+    "gene_x_sample.to_csv(\n",
+    "    \"{}/{}_rna_gene_x_sample.tsv\".format(directory_path, gse_id), sep=\"\\t\"\n",
+    ")"
    ]
   }
  ],
