--- a/notebook/medulloblastoma.ipynb
+++ b/notebook/medulloblastoma.ipynb
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://www.nature.com/articles/nature11327"
+    "## [Subgroup-specific structural variation across 1,000 medulloblastoma genomes](https://www.nature.com/articles/nature11327)"
    ]
   },
   {
@@ -68,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://www.cell.com/cancer-cell/fulltext/S1535-6108(17)30201-5"
+    "## [Intertumoral Heterogeneity within Medulloblastoma Subgroups](https://www.cell.com/cancer-cell/fulltext/S1535-6108(17)30201-5)"
    ]
   },
   {
@@ -100,26 +100,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from kraft import group, tidy\n",
-    "\n",
-    "\n",
-    "def index_tidy_write(dataframe, dict_, file_path):\n",
-    "\n",
-    "    dataframe.index = dataframe.index.map(dict_)\n",
-    "\n",
-    "    dataframe = tidy(group(dataframe.loc[~dataframe.index.isna()]))\n",
-    "\n",
-    "    dataframe.to_csv(file_path, sep=\"\\t\")\n",
-    "\n",
-    "    return dataframe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "gene_x_sample = pd.read_csv(\n",
     "    kraft.download(\n",
     "        \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE85nnn/GSE85212/suppl/GSE85212_Methylation_763samples_SubtypeStudy_TaylorLab_beta_values.txt.gz\",\n",
@@ -131,7 +111,7 @@
     "\n",
     "gene_x_sample.index = gene_x_sample.index.map(name_biology.ILMNID_GENE)\n",
     "\n",
-    "gene_x_sample = tidy(group(gene_x_sample.loc[~gene_x_sample.index.isna()]))\n",
+    "gene_x_sample = kraft.tidy(kraft.group(gene_x_sample.loc[~gene_x_sample.index.isna()]))\n",
     "\n",
     "gene_x_sample.to_csv(\n",
     "    \"{}/{}_methylation_gene_x_sample.tsv\".format(directory_path, gse_id), sep=\"\\t\"\n",
@@ -157,7 +137,7 @@
     "\n",
     "gene_x_sample.index = gene_x_sample.index.map(name_biology.ENS_GENE)\n",
     "\n",
-    "gene_x_sample = tidy(group(gene_x_sample.loc[~gene_x_sample.index.isna()]))\n",
+    "gene_x_sample = kraft.tidy(kraft.group(gene_x_sample.loc[~gene_x_sample.index.isna()]))\n",
     "\n",
     "gene_x_sample.to_csv(\n",
     "    \"{}/{}_rna_gene_x_sample.tsv\".format(directory_path, gse_id), sep=\"\\t\"\n",
